tests/instantiating/masters_invalid_type/stderr.golden
error: masters property must be of type integer, current type float
bus.fbd +2:13
   |
 2 |   masters = 3.14
   |             ^^^^
